[project]
name = "image-gen-mcp"
version = "0.1.0"
description = "MCP server for AI image generation using Gemini"
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "httpx",
    "mcp",
]

[project.scripts]
image-gen-mcp = "image_gen_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen_mcp"]
